# meddies-ocr

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml  requirements.txt  setup_notion.py  test_modal.py
notebooks/: 04_table_dataset_exploration.ipynb
scripts/: debug_processor.py  download_dataset.py  download_full_dataset.sh  download_pdfs_to_images.py  explore_dataset.py  monitor_download.sh  train_modal.py
src/common/: config_loader.py  logging_utils.py
src/models/: student.py
tests/unit/common/: test_config_loader.py  test_logging_utils.py
tests/unit/distillation/: test_uld_loss.py
tests/unit/models/: test_student.py
tests/unit/scripts/: test_train_modal_loading.py
